<resources>
    <string name="app_name">Love Calculator App</string>
    <string name="tips100">Pure Love</string>
    <string name="tips70_90"> has a very good chance of being successful, but this does\'t mean that you don\'t have to work on the relationship. Remember that every relationship needs spending time together, talking with each other etc</string>
    <string name="tips50_70"> has a reasonable chance of working out, but on the other hand, it might not. Your relationship may suffer good and bad times. If things might not be working out as you would like them to, do not hesitate to talk about it with the person involved. Spend time together, talk with each other.</string>
    <string name="tips30_50">The chance of a relationship working out is not very big, but a relationship is very well possible, if the two of you really want it to, and are prepared to make some sacrifices for it. You will have to spend a lot of quality time together. You must be aware of the fact that this relationship might not work out at all, no matter how much time you invest in it.</string>
    <string name="tips10_30">might work out  but the chance is very small. A successful relationship is possible, but you both have to work on it. Do not sit back and think that it will all work out fine, because it might not be working out the way you wanted it to. Spend as much time with each other as possible. Again, the chance of this relationship working out is very small, so even when you do work hard on it, it still might not work out.</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_lover_name">Enter Your Lover Name</string>
    <string name="calculate">Calculate</string>
    <string name="show_tips">Show Tips</string>
    <string name="ok">Ok</string>
    <string name="share">Share</string>
    <string name="_100">100%</string>
    <string name="your_name_with_your_lover_name">Your Name With Your Lover Name</string>
    <string name="congratulations">Congratulations</string>
</resources>
