<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/love_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/yourNameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_style"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:paddingStart="30dp"
            android:paddingLeft="30dp"
            android:paddingTop="8dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="8dp"
            android:textColor="@color/editTextColor"
            android:textColorHint="#E6E3E3"
            app:fontFamily="@font/lobster" />

        <EditText
            android:id="@+id/yourLoverNameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_style"
            android:ems="10"
            android:hint="@string/enter_your_lover_name"
            android:inputType="textPersonName"
            android:paddingStart="30dp"
            android:paddingLeft="30dp"
            android:paddingTop="8dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="8dp"
            android:textColor="@color/editTextColor"
            android:textColorHint="#E6E3E3"
            app:fontFamily="@font/lobster" />

        <Button
            android:id="@+id/calculateBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/heart"
            app:fontFamily="@font/exo_2_extrabold"
            android:text="@string/calculate"
            android:textColor="#FFF" />


    </LinearLayout>
</LinearLayout>