<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/congratulation_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="#FAFAFA"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="40dp"
                        android:text="@string/congratulations"
                        app:fontFamily="@font/exo_2_extralight"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/showCoupleNameTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="3"
                        android:padding="5dp"
                        android:text="@string/your_name_with_your_lover_name"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/exo_2_extralight" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center">

                        <ProgressBar
                            android:id="@+id/progressBar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/circle_shape"
                            android:indeterminate="false"
                            android:max="100"
                            android:progress="50"
                            android:progressDrawable="@drawable/custom_progressbar_drawable" />


                        <TextView
                            android:id="@+id/showLovePercentTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/progressBar"
                            android:layout_centerInParent="true"
                            android:layout_marginBottom="35dp"
                            android:text="@string/_100"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            app:fontFamily="@font/lobster" />
                    </RelativeLayout>


                    <TextView
                        android:id="@+id/showTipsTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:text="@string/show_tips"
                        android:textSize="16sp"
                        app:fontFamily="@font/exo_2_thin_italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/okBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/primary_button"
                            android:padding="5dp"
                            android:text="@string/ok"
                            android:textColor="@android:color/white"
                            app:fontFamily="@font/exo_2_extrabold" />

                        <Button
                            android:id="@+id/shareBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/primary_button"
                            android:padding="5dp"
                            android:text="@string/share"
                            app:fontFamily="@font/exo_2_extrabold"
                            android:textColor="@android:color/white" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </android.support.v7.widget.CardView>

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal|top"
            android:padding="1dp"
            android:src="@drawable/heart" />

    </FrameLayout>
</LinearLayout>